docs: reflect OpenTelemetry integration and test infrastructure changes
Update system design document to reflect recent OpenTelemetry configuration
work and separation of smoke tests from load tests.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>